<?xml version="1.0"?>
<package format="2">
    <name>map_controller</name>
    <version>0.0.0</version>
    <description>The map controller package</description>
    <maintainer email="ros@todo.todo">ros</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>nav_msgs</depend>
    <depend>map_msgs</depend>
    <depend>roscpp</depend>
    <depend>tf2</depend>

    <test_depend>rospy</test_depend>
    <test_depend>rostest</test_depend>
    <test_depend>rosunit</test_depend>
</package>
